--- a/style/global.css
+++ b/style/global.css
@@ -27,6 +27,29 @@
 
     --buttom-label: 500 1rem/1.5 var(--font-family2);
     --span: 500 0.875rem/1.5 var(--font-family2);
+
+    --text-sm: 0.875rem;
+    --text-base: 1rem;
+    --text-lg: 2.5rem;
+    --text-xl: 4rem;
+}
+
+html, button {
+    font: 500 1rem/1.5 "Montserrat", sans-serif;
+}
+
+h1, h2 {
+    font-family: "Syne", sans-serif;
+}
+
+h1 {
+    font-size: var(--text-xl);
+    line-height: 1.25;
+}
+
+h2 {
+    font-size: var(--text-lg);
+    line-height: 1.2;
 }
 
 a {
