--- a/style/index.css
+++ b/style/index.css
@@ -2,4 +2,5 @@
 @import url(header.css);
 @import url(hero.css);
 @import url(banner.css);
-@import url(galery.css)
+@import url(galery.css);
+@import url(footer.css);
